# clown_sort

./: .clown_sort.example  .gitignore  .screenshot_sorter.example  .social_arsenal.example  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: python-package.yml
clown_sort/: __init__.py  config.py  filename_extractor.py  name_images.py  sort_rule.py  sort_selector.py  sorter.py
clown_sort/files/: image_file.py  import pdfplumber.py  pdf_file.py  sortable_file.py
clown_sort/lib/: page_range.py  rule_match.py
clown_sort/sorting_rules/: crypto.csv
clown_sort/util/: argument_parser.py  constants.py  dict_helper.py  filesystem_helper.py  logging.py  rich_helper.py  string_helper.py
image_namer/: __init__.py  config.py  filename_extractor.py  image_file.py  name_images.py  sort_images.py  sorter.py
image_namer/files/: __init__.py  image_file.py  pdf_file.py  sortable_builder.py  sortable_file.py
image_namer/sorting_rules/: crypto.csv
image_namer/util/: argument_parser.py  filesystem_helper.py  logging.py
scripts/: epstein_chat_logs_reformatter.py  extract_text_from_files.py  extract_text_from_files_in_dir.py  publish.sh  render_help.sh
scripts/one_timers/: rename_files_with_colons.py
social_arsenal/: __init__.py  config.py  filename_extractor.py  name_images.py  sorter.py
social_arsenal/files/: image_file.py  sortable_file.py
social_arsenal/sorting_rules/: crypto.csv
social_arsenal/util/: argument_parser.py  filesystem_helper.py  logging.py  string_helper.py
tests/: conftest.py  test_config.py  test_filename_extractor.py  test_image_file.py  test_sortable_file.py  test_sorter.py
tests/files/: test_image_file.py  test_sortable_file.py
tests/lib/: test_page_range.py  test_rule_match.py
tests/util/: test_filesystem_helper.py  test_string_helper.py
