[tool.poetry]
name = "social-arsenal"
version = "0.2.3"
description = "Sort screenshots based on rules or through individual review."
authors = ["Michel de Cryptadamus <michel@cryptadamus.com>"]
readme = "README.md"
packages = [{include = "social_arsenal"}]
homepage = "https://github.com/michelcrypt4d4mus/screenshot_sorter"

include = [
    "CHANGELOG.md",
    "LICENSE",
    { path = "sorting_rules/crypto.csv" }
]

keywords = [
    'ocr',
    'organization',
    'organizer',
    'screenshot',
    'rename',
    'sort',
]


[tool.poetry.dependencies]
python = "^3.10"
exif = "^1.5.0"
PySimpleGUI = {version = "^4.60.4", optional = true}
pytesseract = "^0.3.10"
rich = "^13.0.1"
piexif = "^1.1.3"
pillow = "^9.4.0"
filedate = "^2.0"
python-dotenv = "^0.21.1"
rich-argparse-plus = "^0.3.1.4"
pyexiftool = "^0.5.5"
pypdf = "^3.4.1"



[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
sort_screenshots = 'social_arsenal:sort_screenshots'
#sort_non_screenshots = 'social_arsenal:sort_non_screenshots'
