[tool.poetry]
name = "clown_sort"
version = "1.13.1"
description = "Sort screenshots based on rules or through individual review."
authors = ["Michel de Cryptadamus <michel@cryptadamus.com>"]
readme = "README.md"
packages = [{include = "clown_sort"}]
homepage = "https://github.com/michelcrypt4d4mus/clown_sort"

include = [
    "CHANGELOG.md",
    "LICENSE",
    { path = "sorting_rules/crypto.csv" }
]

keywords = [
    'ocr',
    'organization',
    'organizer',
    'screenshot',
    'rename',
    'sort',
]

classifiers = [
    "Topic :: Desktop Environment :: File Managers",
    "Topic :: Multimedia :: Graphics :: Capture :: Screen Capture",
    "Topic :: Multimedia :: Graphics :: Capture",
    "Topic :: Scientific/Engineering :: Image Processing",
]


[tool.poetry.urls]
Changelog = "https://github.com/michelcrypt4d4mus/clown_sort/blob/main/CHANGELOG.md"


[tool.poetry.dependencies]
python = "^3.8"

exif = "^1.5.0"
filedate = "^2.0"
piexif = "^1.1.3"
pillow = ">=9.5.0,<11.0.0"
PySimpleGUI = {version = "^4.60.4", optional = true}
pycryptodome = {version = "^3.17", optional = true}
pyexiftool = "^0.5.5"
PyMuPDF = {version = "^1.22.3", optional = true}
pypdf = "^5.0.1"
pytesseract = "^0.3.10"
python-dotenv = "^0.21.1"
rich = "^13.0.1"
rich-argparse-plus = "^0.3.1.4"
unidecode = "^1.3.8"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
bpython = "^0.24"


[tool.poetry.extras]
pdf = ['pycryptodome', 'PyMuPDF']
gui = ['PySimpleGUI']


[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
extract_pages_from_pdf = 'clown_sort:extract_pages_from_pdf'
extract_text_from_files = 'clown_sort:extract_text_from_files'
purge_non_images_from_dir = 'clown_sort:purge_non_images_from_dir'
set_screenshot_timestamps_from_filenames = 'clown_sort:set_screenshot_timestamps_from_filenames'
sort_screenshots = 'clown_sort:sort_screenshots'
