[tool.poetry]
name = "clown_sort"
version = "1.14.1"
description = "Sort screenshots based on text matching rules or through GUI review."
authors = ["Michel de Cryptadamus <michel@cryptadamus.com>"]
readme = "README.md"
packages = [{include = "clown_sort"}]
homepage = "https://github.com/michelcrypt4d4mus/clown_sort"
license = "GPL-3.0-or-later"

include = [
    "CHANGELOG.md",
    "LICENSE",
    { path = "sorting_rules/crypto.csv" }
]

keywords = [
    'ocr',
    'organization',
    'organizer',
    'screenshot',
    'rename',
    'sort',
]

classifiers = [
    "Environment :: Console",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Information Technology",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Topic :: Desktop Environment :: File Managers",
    "Topic :: Home Automation",
    "Topic :: Multimedia :: Graphics :: Capture :: Screen Capture",
    "Topic :: Multimedia :: Graphics :: Capture",
    "Topic :: Scientific/Engineering :: Image Processing",
]

[tool.poetry.urls]
Changelog = "https://github.com/michelcrypt4d4mus/clown_sort/blob/main/CHANGELOG.md"


[tool.poetry.dependencies]
python = "^3.11.14"
filedate = "^2.0"
FreeSimpleGUI = {optional = true, version = "^5.2"}
pdfalyzer = {extras = ["extract"], version = "^1.17.11"}  # for local pdfalyzer dev use: pdfalyzer = {extras = ["extract"], path = "../pdfalyzer", develop = true}
pyexiftool = "^0.5.5"
unidecode = "^1.3.8"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
bpython = "^0.24"

[tool.poetry.extras]
gui = ['FreeSimpleGUI']


[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
purge_non_images_from_dir = 'clown_sort:purge_non_images_from_dir'
set_screenshot_timestamps_from_filenames = 'clown_sort:set_screenshot_timestamps_from_filenames'
sort_screenshots = 'clown_sort:sort_screenshots'
